kubernetes/apps/media/jellyfin/service.yaml
# Kapitel 11: Jellyfin im Heimnetz unter http://<VM-IP>:8096 (für den Samsung-TV)
# und im Cluster unter http://jellyfin.media:8096
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: http
