kubernetes/apps/media/jellyfin/ingress.yaml
# Kapitel 11: Jellyfin im Tailnet unter https://jellyfin.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: jellyfin
      port:
        number: 8096
  tls:
    - hosts:
        - jellyfin
